src/objects/Casos__mdt.object
<CustomObject>
    <description>Metadatos referentes al objeto Caso</description>
    <fields>
        <fullName>MTD_CAS_CAS_Tarea__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Checkbox que determinará si es necesario añadir una tarea</description>
        <label>Tarea</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MTD_CAS_NUM_Dias_amarillo__c</fullName>
        <description>Campo numérico que almacena el número de Días que una orden de trabajo se considera en estado de semáforo “amarillo”.</description>
        <label>Días Amarillos</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MTD_CAS_NUM_Dias_verde__c</fullName>
        <description>Campo numérico que almacena el número de Días que una orden de trabajo se considera en estado de semáforo “verde”.</description>
        <label>Días Verdes</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MTD_CAS_NUM_Duracion_estimada__c</fullName>
        <description>Campo numérico que contendrá el número de días que se añadirán a la fecha de cambio de estado para calcular la fecha de vencimiento de la tarea</description>
        <label>Duración Estimada</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MTD_CAS_SEL_Estado_c__c</fullName>
        <description>Campo picklist con los posibles estados de la orden de trabajo</description>
        <label>Estado</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>En Curso</fullName>
                    <default>true</default>
                    <label>En Curso</label>
                </value>
                <value>
                    <fullName>Inactivo</fullName>
                </value>
                <value>
                    <fullName>Cerrado</fullName>
                </value>
                <value>
                    <fullName>Anulado</fullName>
                </value>
                <value>
                    <fullName>En Espera de Cliente</fullName>
                </value>
                <value>
                    <fullName>En Espera de Cía</fullName>
                </value>
                <value>
                    <fullName>Pdte. Análisis</fullName>
                </value>
                <value>
                    <fullName>Pdte. de Tratamiento</fullName>
                </value>
                <value>
                    <fullName>Nuevo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MTD_CAS_SEL_Naturaleza__c</fullName>
        <description>Campo que representa las naturalezas de una reclamación</description>
        <label>Naturaleza</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No conforme con el rechazo</fullName>
                    <default>true</default>
                    <label>No conforme con el rechazo</label>
                </value>
                <value>
                    <fullName>Mala atención del agente</fullName>
                </value>
                <value>
                    <fullName>Incumplimiento SLA&apos;s</fullName>
                </value>
                <value>
                    <fullName>Tiempo en la atención telefónica</fullName>
                </value>
                <value>
                    <fullName>Incumplimiento de cita</fullName>
                </value>
                <value>
                    <fullName>Incumplimiento de Urgencia</fullName>
                </value>
                <value>
                    <fullName>Actitud de profesional</fullName>
                </value>
                <value>
                    <fullName>Suciedad tras la reparación</fullName>
                </value>
                <value>
                    <fullName>Actitud perito</fullName>
                </value>
                <value>
                    <fullName>Informalidad Perito</fullName>
                </value>
                <value>
                    <fullName>Profesional no ha contactado con el cliente</fullName>
                </value>
                <value>
                    <fullName>No conforme con la indemnización</fullName>
                </value>
                <value>
                    <fullName>Demora en la tramitación del siniestro</fullName>
                </value>
                <value>
                    <fullName>Procedimiento de Compañía no respetado</fullName>
                </value>
                <value>
                    <fullName>Demora en la tramitación del servicio</fullName>
                </value>
                <value>
                    <fullName>Demora en realización de trabajo</fullName>
                </value>
                <value>
                    <fullName>Trabajos mal efectuados /mala calidad</fullName>
                </value>
                <value>
                    <fullName>Desperfectos en vivienda</fullName>
                </value>
                <value>
                    <fullName>Trabajos no finalizados</fullName>
                </value>
                <value>
                    <fullName>Precio</fullName>
                </value>
                <value>
                    <fullName>Descoordinación de gremios</fullName>
                </value>
                <value>
                    <fullName>Desperfectos en la vivienda</fullName>
                </value>
                <value>
                    <fullName>Profesional no ha contactado con cliente</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MTD_CAS_SEL_Prioridad__c</fullName>
        <description>Campo que indica la prioridad que tiene la tarea que se crea tras el cambio de estado</description>
        <label>Prioridad</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Urgente</fullName>
                    <default>true</default>
                    <label>Urgente</label>
                </value>
                <value>
                    <fullName>No Urgente</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MTD_CAS_TXT_Compania__c</fullName>
        <description>Campo texto que contendrá el código asociado a la compañía aseguradora</description>
        <label>Compañía</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MTD_CAS_TXT_Descripcion_Tarea__c</fullName>
        <description>Cuerpo de la tarea que se muestra en comentarios</description>
        <label>Descripción de Tarea</label>
        <type>TextArea</type>
    </fields>
    <label>Casos</label>
    <pluralLabel>Casos</pluralLabel>
</CustomObject>